[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Death_Menu.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 1 )

[node name="Background_Container" type="MarginContainer" parent="Panel"]
margin_left = 200.0
margin_top = 200.0
margin_right = 824.0
margin_bottom = 400.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Background_Container"]
margin_right = 624.0
margin_bottom = 200.0
alignment = 1

[node name="Death_Message" type="Label" parent="Panel/Background_Container/VBoxContainer"]
margin_top = 87.0
margin_right = 624.0
margin_bottom = 101.0
text = "Something went wrong"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/Background_Container/VBoxContainer"]
margin_top = 105.0
margin_right = 624.0
margin_bottom = 113.0
alignment = 1

[node name="Retry_Button" type="TextureButton" parent="Panel/Background_Container/VBoxContainer/VBoxContainer2"]
margin_right = 624.0
stretch_mode = 3

[node name="Main_Menu_Button" type="TextureButton" parent="Panel/Background_Container/VBoxContainer/VBoxContainer2"]
margin_top = 4.0
margin_right = 624.0
margin_bottom = 4.0

[node name="Quit_Button" type="TextureButton" parent="Panel/Background_Container/VBoxContainer/VBoxContainer2"]
margin_top = 8.0
margin_right = 624.0
margin_bottom = 8.0
[connection signal="tree_entered" from="Panel/Background_Container/VBoxContainer/Death_Message" to="Panel" method="_on_Death_Message_tree_entered"]
[connection signal="pressed" from="Panel/Background_Container/VBoxContainer/VBoxContainer2/Retry_Button" to="Panel" method="_on_Retry_Button_pressed"]
[connection signal="pressed" from="Panel/Background_Container/VBoxContainer/VBoxContainer2/Main_Menu_Button" to="Panel" method="_on_Main_Menu_Button_pressed"]
[connection signal="pressed" from="Panel/Background_Container/VBoxContainer/VBoxContainer2/Quit_Button" to="Panel" method="_on_Quit_Button_pressed"]
